# airwatch-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  RUFF_GUIDE.md  UV_SETUP.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: 01_project_overview.md  02_data_pipeline.md  03_model_inference.md  04_environment_and_deployment.md  05_model_monitoring.md  06_testing_and_ci_cd.md  07_deployment_and_infrastructure.md  08_monitoring_and_observability.md  09_testing_and_quality_assurance.md  10_deployment_and_operationalization.md  11_monitoring_and_observability.md  12_configuration_and_environment.md  PROJECT_STRUCTURE.md  RUFF_GUIDE.md  UV_SETUP.md  mkdocs.yml
docs/docs/: index.md
flows/: data_ingestion.py  data_ingestion_README.md  data_transformation.py  data_transformation_README.md  inference_data_preparation.py  mlflow_test.py  model_inference.py  model_monitoring.py  model_monitoring_README.md  model_selector.py  model_training.py  model_training_README.md  register_blocks.py  run_full_training_and_selection.ps1
scripts/: README.md  deploy_monitoring.py  inspect_s3_parquet.py  prefect_email_notification.txt  test_mlflow_setup.py
tests/: README.md  test_basic.py  test_data.py  test_data_ingestion.py  test_data_transformation.py  test_inference_data_preparation.py  test_model_inference.py  test_model_monitoring.py  test_model_selector.py  test_model_training.py  test_s3_simple.py
